added Caching feature, added caching and concurrency to ManagerNodeRepositoryImpl